--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.11.1",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
